--- a/references.bib
+++ b/references.bib
@@ -188,7 +188,7 @@
   author = {Original S code by Richard A. Becker and Allan R. Wilks. R version by Ray Brownrigg. Enhancements by Thomas P Minka and Alex Deckmyn.},
   year = {2018},
   note = {R package version 3.3.0},
-  url = {https://CRAN.R-project.org/package=maps},
+  url = {https://CRAN.R-project.org/package=maps}
 }
   
 @Manual{wbstats,
