Updating the gramma issue

--- a/Happiness.Rmd
+++ b/Happiness.Rmd
@@ -547,7 +547,7 @@ Population<- read_csv("Data/API_SP.POP.TOTL_DS2_en_csv_v2_1120881.csv", skip = 4
 world_map <-ne_countries(returnclass = "sf")
 ```
 
-  To explore the factors that could be contributing to the happiness score differences between each year,a **linear regression model** is established by testing the relationship between predictor and response variables.From the **LM** result, we can conclude the estimated closed form of happiness score:
+  To explore the factors that could be contributing to the happiness score differences between each year,a linear regression model is established by testing the relationship between predictor and response variables. From the **LM** result, we can conclude the estimated closed form of happiness score:
 
 \begin{align*}
 \text{Happiness score} = & \text{ GDP per Capital } + \text{ Family } + \text{ Life expectancy }+ \text{ Freedom } +   \\ 
@@ -666,14 +666,14 @@ head(happy_score)%>%kable(caption = 'A clean dataset with Happiness Score')%>%
 
 ### Variable importance
 
-  For comparing the relative importance with each predictors, the **lmg** approach with package `relaipmo` [@relaimpo] is used for evaluating the variable importance in modelling happiness score. By using **lmg** approach to  calculate the relative contribution of each predictor to the R squared with the consideration of the sequence of predictors appearing in the model. 
+  For comparing the relative importance with each predictors, the lmg approach with package `relaipmo` [@relaimpo] is used for evaluating the variable importance in modelling happiness score. By using lmg approach to  calculate the relative contribution of each predictor to the R squared with the consideration of the sequence of predictors appearing in the model. 
   
-  Firstly, we built up a **LM** model for the new happiness score dataset. By eliminating the heteroskedasticity in the residual and interpreting the percentage marginal effect of each variable, using logarithmic method for setting up a linear regression model is an appropriate way. Therefore, a **LM** model is shown :
+  Firstly, we built up a linear regression model for the new happiness score dataset. By eliminating the heteroskedasticity in the residual and interpreting the percentage marginal effect of each variable, using logarithmic method for setting up a linear regression model is an appropriate way. Therefore, a linear regression model is shown :
 \begin{align*}
 \text{log(Happiness Score)} = & \text{ CPI} +  \text{ log(GDP)}+\text{ log(Area)}+ \text{ log(Population)} 
 \end{align*}
 
-  From **Figure \@ref(fig:variable-important)**,we can see that the total proportion of variance explained by the model with all four predictors is around 72.88%. For the four predictors, GDP with the highest value in four predictors contributed to around 65% for the happiness scores,indicating that GDP factor is the most important for happiness score and it is more likely to affect the change of happiness scores when the GDP variable change [@gromping2015variable]. On the other hand,by using **variance inflation factor** (VIF) measure to evaluate the impact of the correlation among the explanatory variables. In the **Table \@ref(tab:mulitilinearity)**, the VIF value in each predictor is not too high but for the population variable is the highest one around at 3, indicating that there is a slight correlation of population with other variables in the model [@daoud2017multicollinearity].
+  From **Figure \@ref(fig:variable-important)**,we can see that the total proportion of variance explained by the model with all four predictors is around 72.64%. For the four predictors, GDP with the highest value in four predictors contributed to above 65% for the happiness scores,indicating that GDP factor is the most important for happiness score and it is more likely to affect the change of happiness scores when the GDP variable change [@gromping2015variable]. On the other hand,by using variance inflation factor (VIF) measure to evaluate the impact of the correlation among the explanatory variables. In the **Table \@ref(tab:mulitilinearity)**, the VIF value in each predictor is not too high but for the population variable is the highest one around at 3, indicating that there is a slight correlation of population with other variables in the model [@daoud2017multicollinearity].
 
 ### Scatter matrix
   To analyze the relationship between different predictors, we use scatter matrix which can be visualized easily how much one variable is affected by another or the relationship between them. The **Figure \@ref(fig:scattermatrix)** compares all the predictors in the model and represents the relationship between these variables. If there is a strong linear positive correlation between the two factors, we can conclude that if one factor is important in assessing happiness scores, then another factor may also contribute to this. Based on the figure, it seems that the importance of GDP and area as well as population and area are closely related. Therefore,GDP is the most important factors for evaluating the happiness scores as it has the highest positive correlation with happiness score,but also for the developed countries in most of western area with highest GDP, the happiness scores will be higher than the development countries with lower GDP.
@@ -930,7 +930,7 @@ According to the overall studies, the report has concluded that Happiness scores
 
 On the other hand, the concept of happiness of each people would keep changing over years, the main reason might because the environment of each country has influence the sense of happiness of citizens. The countries with higher happiness scores are associated with healthier longevity, having better social support and better perceptions of government, and are usually more able to meet life’s demands. Albeit this, many countries with lower happiness scores had high scores in 'generosity' and 'freedom', suggesting that other key variables may be diminishing the happiness scores of these countries. However, it should be noted that the aforementioned variables may be taking credit due to unmeasured factors.
 
-In addition, based on analyzing the relative variable importance in modeling the happiness scores with four factors which are GDP, CPI,area and population, which has indicated that GDP is the most significant factors and the area variable is strongly related to the GDP which contributes to happiness score as well. Therefore,  GDP is an essential factor for evaluating the happiness score especially for rich countries which GDP dominates the happiness scores
+In addition, based on analyzing the relative variable importance in modeling the happiness scores with four factors which are GDP, CPI,area and population, it has been indicated that GDP is the most significant factors. Also, the area variable is strongly related with the GDP which contributes to happiness score as well. Therefore, GDP is an essential factor for evaluating the happiness score，especially for rich countries which GDP dominates the happiness scores comparing with other factors.
 
 Furthermore, GDP has a positive marginal effect on happiness score, while the population has a negative marginal effect on happiness score. Although heteroskedasticity, endogeneity and observability issues arise, the happiness score can still be well explained by our simple linear model.
 
