Fix comma, delete some files

--- a/Happiness.Rmd
+++ b/Happiness.Rmd
@@ -930,7 +930,7 @@ According to the overall studies, the report has concluded that Happiness scores
 
 On the other hand, the concept of happiness of each people would keep changing over years, the main reason might because the environment of each country has influence the sense of happiness of citizens. The countries with higher happiness scores are associated with healthier longevity, having better social support and better perceptions of government, and are usually more able to meet life’s demands. Albeit this, many countries with lower happiness scores had high scores in 'generosity' and 'freedom', suggesting that other key variables may be diminishing the happiness scores of these countries. However, it should be noted that the aforementioned variables may be taking credit due to unmeasured factors.
 
-In addition, based on analyzing the relative variable importance in modeling the happiness scores with four factors which are GDP, CPI,area and population, it has been indicated that GDP is the most significant factors. Also, the area variable is strongly related with the GDP which contributes to happiness score as well. Therefore, GDP is an essential factor for evaluating the happiness score，especially for rich countries which GDP dominates the happiness scores comparing with other factors.
+In addition, based on analyzing the relative variable importance in modeling the happiness scores with four factors which are GDP, CPI,area and population, it has been indicated that GDP is the most significant factors. Also, the area variable is strongly related with the GDP which contributes to happiness score as well. Therefore, GDP is an essential factor for evaluating the happiness score, especially for rich countries which GDP dominates the happiness scores comparing with other factors.
 
 Furthermore, GDP has a positive marginal effect on happiness score, while the population has a negative marginal effect on happiness score. Although heteroskedasticity, endogeneity and observability issues arise, the happiness score can still be well explained by our simple linear model.
 
