--- a/Happiness.Rmd
+++ b/Happiness.Rmd
@@ -938,25 +938,30 @@ Furthermore, GDP has a positive marginal effect on happiness score, while the po
 
 # Acknowledgement
 
-The programming language used to analyse the happiness data is R [@R]. Following packages has been included in our scripts:
+The programming language used to analyse the happiness data is R (3.5.3) [@R]. The latex version to generate this report is "pdfTeX 3.14159265-2.6-1.40.21 (TeX Live 2020/W32TeX) kpathsea version 6.3.2".
 
-- package ggplot2 [@ggplot2],
-- package tidyverse [@tidyverse],
-- package dplyr [@dplyr],
-- package relaimpo [@relaimpo],
-- package GGally [@GGally],
-- package kableExtra [@kableExtra],
-- package rnaturalearth [@rnaturalearth],
-- package sf [@sf],
-- package rgeos [@rgeos],
-- package lwgeom [@lwgeom],
-- package car [@car],
-- package here [@here],
-- package lubridate [@lubridate],
-- package cowplot [@cowplot],
-- package janitor [@janitor],
-- package maps [@maps],
-- package wbstats [@wbstats],
-- package plotly [@plotly]
+Following packages has been included in our scripts:
+
+- package ggplot2 (3.2.0) [@ggplot2],
+- package tidyverse (1.2.1) [@tidyverse],
+- package dplyr (1.0.0) [@dplyr],
+- package relaimpo (2.2.3) [@relaimpo],
+- package GGally (1.4.0) [@GGally],
+- package kableExtra (1.1.0) [@kableExtra],
+- package rnaturalearth (0.1.0) [@rnaturalearth],
+- package sf (0.9.2) [@sf],
+- package rgeos (0.4.2) [@rgeos],
+- package lwgeom (0.2.1) [@lwgeom],
+- package car (3.0.2) [@car],
+- package here (0.1) [@here],
+- package lubridate (1.7.4) [@lubridate],
+- package cowplot (1.0.0) [@cowplot],
+- package janitor (1.2.1) [@janitor],
+- package maps (3.3.0) [@maps],
+- package wbstats (0.2) [@wbstats],
+- package plotly (4.8.0) [@plotly],
+- package knitr (1.28) [@knitr],
+- package rmarkdown (2.1) [@rmarkdown],
+- package tinytex (0.22) [@tinytex]
 
 \clearpage
