--- a/references.bib
+++ b/references.bib
@@ -88,20 +88,20 @@
   
 @Manual{dplyr,
     title = {dplyr: A Grammar of Data Manipulation},
-    author = {Hadley Wickham and Romain Fran?ois and Lionel Henry and Kirill Müller},
+    author = {Hadley Wickham and Romain François and Lionel Henry and Kirill Müller},
     year = {2020},
     note = {R package version 1.0.0},
-    url = {https://CRAN.R-project.org/package=dplyr}
+    url = {https://CRAN.R-project.org/package=dplyr},
   }
 
 
 @Manual{GGally,
-  title = {GGally: Extension to 'ggplot2'},
-  author = {Barret Schloerke and Di Cook and Joseph Larmarange and Francois Briatte and Moritz Marbach and Edwin Thoen and Amos Elberg and Jason Crowley},
-  year = {2020},
-  note = {R package version 2.0.0},
-  url = {https://CRAN.R-project.org/package=GGally}
-}
+    title = {GGally: Extension to 'ggplot2'},
+    author = {Barret Schloerke and Jason Crowley and Di Cook and Francois Briatte and Moritz Marbach and Edwin Thoen and Amos Elberg and Joseph Larmarange},
+    year = {2018},
+    note = {R package version 1.4.0},
+    url = {https://CRAN.R-project.org/package=GGally}
+  }
 
 @techreport{sachs2018world,
   title={World happiness report 2018},
@@ -204,7 +204,7 @@
     title = {janitor: Simple Tools for Examining and Cleaning Dirty Data},
     author = {Sam Firke},
     year = {2020},
-    note = {R package version 2.0.1},
+    note = {R package version 1.2.1},
     url = {https://CRAN.R-project.org/package=janitor}
   }
   
@@ -231,4 +231,29 @@
     address = {Vienna, Austria},
     year = {2019},
     url = {https://www.R-project.org/}
+  }
+  
+@Manual{knitr,
+    title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
+    author = {Yihui Xie},
+    year = {2020},
+    note = {R package version 1.28},
+    url = {https://yihui.org/knitr/}
+  }
+  
+@Manual{rmarkdown,
+    title = {rmarkdown: Dynamic Documents for R},
+    author = {JJ Allaire and Yihui Xie and Jonathan McPherson and Javier Luraschi and Kevin Ushey and Aron Atkins and Hadley Wickham and Joe Cheng and Winston Chang and Richard Iannone},
+    year = {2020},
+    note = {R package version 2.1},
+    url = {https://github.com/rstudio/rmarkdown}
+  }
+  
+@Manual{tinytex,
+    title = {tinytex: Helper Functions to Install and Maintain 'TeX Live', and Compile
+'LaTeX' Documents},
+    author = {Yihui Xie},
+    year = {2020},
+    note = {R package version 0.22},
+    url = {https://github.com/yihui/tinytex}
   }
